# fraud-detection-system

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.fusion  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  README.md  docker-compose.yaml
airflow/config/: dag_config.yaml
airflow/dags/: retrain_promote_dag.py
config/: default.yaml
data/: README.md
deploy/: space_README.md
docs/: DEMO_SCRIPT.md  README.md  WRITEUP.md  sample_transactions.json
experiments/: README.md
experiments/results/: calibration.csv  calibration.json  fusion_comparison.csv  latency.json  paysim_generalization.csv  threshold_cost.csv
monitoring/: README.md
monitoring/reports/: drift_summary_drift.json  drift_summary_stable.json
notebooks/: README.md
scripts/: build_demo_assets.py  fetch_data.py
serving/: Dockerfile  README.md  locustfile.py
src/fraud_detection/: __init__.py  cli.py  config.py
src/fraud_detection/artifacts/: __init__.py  store.py
src/fraud_detection/data/: loader.py
src/fraud_detection/evaluation/: __init__.py  metrics.py
src/fraud_detection/experiments/: __init__.py  calibration.py  fusion_comparison.py  paysim_generalization.py  threshold_cost.py
src/fraud_detection/fusion/: __init__.py  engine.py
src/fraud_detection/models/: __init__.py  lightgbm_model.py  lstm_model.py
src/fraud_detection/monitoring/: __init__.py  drift.py
src/fraud_detection/pipelines/: __init__.py  promotion.py  subsystem1.py  subsystem2.py  train.py
src/fraud_detection/preprocessing/: __init__.py  base_preprocessor.py  feature_selection.py  hybrid_os.py  hybrid_us.py  windowing.py
src/fraud_detection/serving/: __init__.py  app.py  benchmark.py  demo_examples.json  explain.py  explain_lstm.py  feature_meta.json  ui.py
tests/: test_artifacts.py  test_calibration.py  test_config.py  test_feature_selection.py  test_fusion_engine.py  test_metrics.py  test_monitoring.py  test_preprocessing.py  test_promotion.py  test_serving.py  test_windowing.py
